fixed whitespace

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -7,5 +7,5 @@
 
 .corner-gradient {
   background-color: transparent;
-  -panel-corner-radius: 0;
+  panel-corner-radius: 0;
 }
